--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -1,3 +1,6 @@
+$primary-color: #2EA250;
+$secondary-color: #E0DFE1;
+
 body {
   margin: 2rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+h2 {
+  font-size: 2rem;
+  margin: 0;
+  color: $primary-color;
+}
+h3 {
+  font-size: 2rem;
+  margin: 0;
 }
