--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -28,3 +28,54 @@ h3 {
   font-size: 2rem;
   margin: 0;
 }
+ul {
+  display: flex;
+  // justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+li {
+  list-style: none;
+}
+.definition {
+  width: 25%;
+}
+.explication {
+  width: 100%;
+}
+
+
+.green-box {
+  background: $primary-color;
+  border-radius: 15px;
+  position: relative;
+  margin: 2rem 0;
+}
+.gray-box{
+  background: $secondary-color;
+  border-radius: 15px;
+  margin: 1rem 0;
+
+  // position: relative;
+}
+// .head-bar {
+//   content: "";
+//     position: absolute;
+//     width: 85%;
+//     right: 10%;
+//     height: 1px;
+//     background-color: white;
+// }
+.list-git {
+  display: flex;
+  justify-content: flex-start
+}
+.title-p-box{
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+}
+.info {
+  display: flex;
+}
