add all section + img

--- a/cheet_sheet_github/src/style/index.scss
+++ b/cheet_sheet_github/src/style/index.scss
@@ -1,7 +1,3 @@
 @import "./components/Settings.scss";
 @import "./components/Header.scss";
-@import "./components/LocalVersion.scss";
-
-
-
-
+@import "./components//CommitOwn.scss";
