--- a/cheet_sheet_github/src/style/components/Header.scss
+++ b/cheet_sheet_github/src/style/components/Header.scss
@@ -1,7 +1,8 @@
 header {
   display: flex;
   flex-direction: row;
-  align-items: center
+  align-items: center;
+  margin: 2rem 0;
 }
 .title-home{
   margin: 0 1rem;
