--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -2,7 +2,7 @@ $primary-color: #2EA250;
 $secondary-color: #E0DFE1;
 
 body {
-  margin: 2rem;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,6 +13,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+main {
+  display: flex;
+  justify-content: space-evenly;
+}
+.right-part{
+  width: 60%;
 }
 
 h1 {
@@ -56,7 +63,6 @@ li {
   background: $secondary-color;
   border-radius: 15px;
   margin: 1rem 0;
-
   // position: relative;
 }
 // .head-bar {
