change syntax of all the box

--- a/cheet_sheet_github/src/style/components/CommitOwn.scss
+++ b/cheet_sheet_github/src/style/components/CommitOwn.scss
@@ -9,8 +9,7 @@
 }
 .black-box h3{
   color: white;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 .black-box p {
   color: $primary-color;
