--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -14,12 +14,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root {
+  max-width: 1640px;
+  margin: 0 auto;
+
+}
 main {
   display: flex;
   justify-content: space-evenly;
 }
 .right-part{
-  width: 60%;
+  width: 55%;
+}
+.left-part{
+  width: 35%;
 }
 
 h1 {
@@ -41,15 +49,18 @@ ul {
   padding: 0;
   margin: 0;
   width: 100%;
+  flex-direction: column;
 }
 li {
   list-style: none;
+  display: flex;
 }
+
 .definition {
-  width: 25%;
+  width: 30%;
 }
 .explication {
-  width: 100%;
+  width: 70%;
 }
 
 
@@ -73,10 +84,7 @@ li {
 //     height: 1px;
 //     background-color: white;
 // }
-.list-git {
-  display: flex;
-  justify-content: flex-start
-}
+
 .title-p-box{
   display: flex;
   flex-direction: column;
