--- a/cheet_sheet_github/src/style/index.scss
+++ b/cheet_sheet_github/src/style/index.scss
@@ -1,3 +1,4 @@
 @import "./components/Settings.scss";
 @import "./components/Header.scss";
 @import "./components//CommitOwn.scss";
+@import "./components/GitConfig.scss";
