--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -75,16 +75,16 @@ li {
   background: $secondary-color;
   border-radius: 15px;
   margin: 1rem 0;
-  // position: relative;
 }
-// .head-bar {
-//   content: "";
-//     position: absolute;
-//     width: 85%;
-//     right: 10%;
-//     height: 1px;
-//     background-color: white;
-// }
+.head-bar {
+  content: "";
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 1px;
+    background-color: white;
+    margin: 1rem 0 0.4rem;
+}
 
 .title-p-box{
   display: flex;
