--- a/cheet_sheet_github/src/style/components/Header.scss
+++ b/cheet_sheet_github/src/style/components/Header.scss
@@ -7,3 +7,11 @@ header {
 .title-home{
   margin: 0 1rem;
 }
+.Link-Title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between
+}
+.Link-btn{
+  text-decoration: none;
+}
