--- a/cheet_sheet_github/src/style/index.scss
+++ b/cheet_sheet_github/src/style/index.scss
@@ -2,3 +2,4 @@
 @import "./components/Header.scss";
 @import "./components//CommitOwn.scss";
 @import "./components/GitConfig.scss";
+@import "./components/Arrows.scss";
