--- a/cheet_sheet_github/src/style/index.scss
+++ b/cheet_sheet_github/src/style/index.scss
@@ -1,5 +1,5 @@
 @import "./components/Settings.scss";
 @import "./components/Header.scss";
+// @import "./components/GitConfig.scss";
 @import "./components//CommitOwn.scss";
-@import "./components/GitConfig.scss";
 @import "./components/Arrows.scss";
