--- a/cheet_sheet_github/src/style/components/CommitOwn.scss
+++ b/cheet_sheet_github/src/style/components/CommitOwn.scss
@@ -8,14 +8,22 @@
   border-radius: 15px;
   margin: 1rem 0;
   max-width: 326px;
+  min-width: 310px;
+}
+.margin-left .black-box{
+  margin: 0.6rem 0;
 }
 
 .black-box h3{
   color: white;
   text-align: center;
 }
+.black-box ul {
+  align-items: flex-start;
+}
 .black-box p {
   color: $primary-color;
+  margin: 0.4rem 0;
 }
 .black-box li {
   flex-direction: column;
