--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -32,7 +32,7 @@ main {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.4rem;
   margin: 0;
 }
 h2 {
@@ -55,13 +55,16 @@ ul {
 li {
   list-style: none;
   display: flex;
+  align-items: center;
 }
 
 .definition {
   width: 30%;
+  margin: 0.4rem 0;
 }
 .explication {
   width: 70%;
+  margin: 0.5rem 0;
 }
 
 
@@ -74,7 +77,7 @@ li {
 .gray-box{
   background: $secondary-color;
   border-radius: 15px;
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 .head-bar {
   content: "";
@@ -89,11 +92,26 @@ li {
 .title-p-box{
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
+  padding: 1.3rem;
 }
 .info {
   display: flex;
 }
+.git_bash_list{
+  width: 40%;
+  margin: 0.4rem;
+}
 .git_config_list{
   width: 100%;
+  margin: 0.4rem;
+}
+
+.margin-left .gray-box {
+  margin: 0.6rem 0;
+}
+.margin-left .title-p-box {
+  padding: 1.1rem;
+}
+.git-blame {
+  width: 40%;
 }
