--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -46,7 +46,6 @@ h3 {
 }
 ul {
   display: flex;
-  // justify-content: space-between;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -55,11 +54,11 @@ ul {
 li {
   list-style: none;
   display: flex;
-  align-items: center;
+  // align-items: center;
 }
 
 .definition {
-  width: 30%;
+  width: 33%;
   margin: 0.4rem 0;
 }
 .explication {
@@ -103,6 +102,10 @@ li {
 }
 .git_config_list{
   width: 100%;
+  margin: 0.4rem;
+}
+.git_status_list{
+  width: 20%;
   margin: 0.4rem;
 }
 
