--- a/cheet_sheet_github/src/style/components/CommitOwn.scss
+++ b/cheet_sheet_github/src/style/components/CommitOwn.scss
@@ -8,7 +8,14 @@
   border-radius: 15px;
   margin: 1rem 0;
   max-width: 326px;
-  min-width: 310px;
+  // min-width: 310px;
+  @media screen and (max-width: 1240px) {
+    height: 100%;
+    width: 100%;
+  }
+  @media screen and (max-width: 900px) {
+    width: 100%;
+  }
 }
 .margin-left .black-box{
   margin: 0.6rem 0;
@@ -32,4 +39,15 @@
 .img-git img{
   height: 194px;
   width: 220px;
+  @media screen and (max-width: 1240px) {
+    height: 100%;
+    width: 100%;
+  }
+  @media screen and (max-width: 1040px) {
+    display: none;
+  }
+  @media screen and (max-width: 900px) {
+    width: 80%;
+    display: flex;
+  }
 }
