--- a/cheet_sheet_github/src/style/components/Settings.scss
+++ b/cheet_sheet_github/src/style/components/Settings.scss
@@ -22,27 +22,53 @@ code {
 main {
   display: flex;
   justify-content: space-evenly;
+  @media screen and (max-width: 900px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .right-part{
   width: 55%;
+  @media screen and (max-width: 1040px) {
+    width: 65%;
+  }
+  @media screen and (max-width: 900px) {
+    width: 90%;
+  }
 }
 .left-part{
   width: 40%;
   max-width: 570px;
+  @media screen and (max-width: 1040px) {
+    width: 30%;
+  }
+  @media screen and (max-width: 900px) {
+    width: 90%;
+    max-width: none;
+  }
 }
 
 h1 {
   font-size: 3.4rem;
   margin: 0;
+  @media screen and (max-width: 1230px) {
+    font-size: 2.8rem;
+  }
 }
 h2 {
-  font-size: 2rem;
+  font-size: 2.3rem;
   margin: 0;
   color: $primary-color;
+  @media screen and (max-width: 1230px) {
+    font-size: 1.9rem;
+  }
 }
 h3 {
   font-size: 2rem;
   margin: 0;
+  @media screen and (max-width: 1230px) {
+    font-size: 1.8rem;
+  }
 }
 ul {
   display: flex;
